# CoMN

./: .gitignore  LICENSE  readme.md
Images/: image.pth  image_mnist.pth  readme.md
ORION3_0/: Makefile  SIM_port.h  SIM_port_cfg.h  makeInfo.txt  online_users  output.txt  (+5 more)
src/refactor/: CMakeLists.txt  Mapping.cpp  Mapping.h  Mesh_Placing.cpp  Mesh_Placing.h  PE.cpp  PE.h  Perf_Evaluator.cpp  Perf_Evaluator.h  PyActInput.cpp  PyActInput.h  PyInput.cpp  PyInput.h  PyParam.cpp  PyParam.h  PyWeight.cpp  PyWeight.h  defines.h  main.cpp  run.sh  tests.cpp  tests.h
src/refactor/CoMN_Sim/include/: Adder.h  BasicUnit.h  BitShifter.h  Comparator.h  CurrentSenseAmp.h  DFF.h  DecoderDriver.h  MaxPool.h  MultilevelSAEncoder.h  MultilevelSenseAmp.h  Mux.h  MuxDecoder.h  NewDecoderDriver.h  NewSwitchMatrix.h  Precharger.h  SRAMWriteDriver.h  SarADC.h  SenseAmp.h  ShiftAdder.h  Sigmoid.h  SwitchMatrix.h  SynapticArray.h  VoltageSenseAmp.h
src/refactor/CoMN_Sim/include/general/: Constant.h  Formula.h  MemCell.h  Param.h  Technology.h  Types.h
src/refactor/CoMN_Sim/src/: Adder.cpp  BasicUnit.cpp  BitShifter.cpp  Comparator.cpp  CurrentSenseAmp.cpp  DFF.cpp  DecoderDriver.cpp  MaxPool.cpp  MultilevelSAEncoder.cpp  MultilevelSenseAmp.cpp  Mux.cpp  MuxDecoder.cpp  NewDecoderDriver.cpp  NewSwitchMatrix.cpp  Precharger.cpp  SRAMWriteDriver.cpp  SarADC.cpp  SenseAmp.cpp  ShiftAdder.cpp  Sigmoid.cpp  SwitchMatrix.cpp  SynapticArray.cpp  VoltageSenseAmp.cpp
src/refactor/CoMN_Sim/src/general/: Formula.cpp  Param.cpp  Technology.cpp
src/refactor/test/: mesh_test.txt  test_partition.txt
(+72 files in other folders)
